--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
-    "@iconify/json": "^2.2.269"
+    "@iconify/json": "^2.2.269",
+    "gsap": "^3.12.5"
   },
   "scripts": {
     "dev": "npx tailwindcss -i ./input.css -o ./assets/css/style.css --watch"
