--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
-    "@iconify/json": "^2.2.269"
+    "@iconify/json": "^2.2.269",
+    "gsap": "^3.12.5"
   }
 }
